--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,22 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ui": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@testing-library/user-event": "14.2.0",
+    "@types/node": "^17.0.12",
+    "@types/react": "^18.0.15",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
     "next-transpile-modules": "9.0.0",
     "tsconfig": "*",
-    "@types/node": "^17.0.12",
-    "@types/react": "17.0.47",
     "typescript": "^4.5.3"
   }
 }
